minor style changes

--- a/src/components/ProfileCard.astro
+++ b/src/components/ProfileCard.astro
@@ -33,7 +33,7 @@ const { images, featureImage } = Astro.props;
   <div data-sparks class="">
     <h1
       data-sparks
-      class="cursor-pointer text-3xl font-bold tracking-tighter transition-transform sm:text-3xl sm:tracking-tight"
+      class="cursor-pointer text-3xl font-semibold tracking-tighter transition-transform sm:text-3xl sm:tracking-tight"
     >
       Trevor Tyler Lee
       <div
