--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -33,7 +33,7 @@ const { Content } = await post.render();
       ) : null
     }
     <div transition:name={`${post.slug}-container`}>
-      <h1 class="mt-12 text-4xl font-extrabold" id="postTitle">
+      <h1 class="mt-12 text-4xl font-semibold" id="postTitle">
         {post.data.title}
       </h1>
       {
