--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -32,15 +32,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
   <head>
     <script is:inline data-astro-rerun>
       function init() {
-        const themes = [
-          "dark",
-          "light",
-          "hacker",
-          "red-dragon",
-          "snes",
-          "ube",
-          "vice-city",
-        ];
+        const themes = ["dark", "light"];
 
         const applyTheme = (theme) => {
           const themesToRemove = themes.filter((t) => t !== theme);
@@ -72,11 +64,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
         const theme = savedTheme ? savedTheme : getPreferredTheme();
         applyTheme(theme);
 
-        if (
-          theme === "dark" ||
-          theme === "red-dragon" ||
-          theme === "vice-city"
-        ) {
+        if (theme === "dark") {
           setGiscusTheme("dark");
         } else {
           setGiscusTheme("light");
@@ -84,15 +72,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
       }
 
       document.addEventListener("astro:page-load", () => {
-        const themes = [
-          "dark",
-          "light",
-          "hacker",
-          "red-dragon",
-          "snes",
-          "ube",
-          "vice-city",
-        ];
+        const themes = ["dark", "light"];
 
         const applyTheme = (theme) => {
           const themesToRemove = themes.filter((t) => t !== theme);
@@ -122,11 +102,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
             localStorage.setItem("theme", selectedTheme);
             applyTheme(selectedTheme);
 
-            if (
-              selectedTheme === "dark" ||
-              selectedTheme === "red-dragon" ||
-              selectedTheme === "vice-city"
-            ) {
+            if (selectedTheme === "dark") {
               setGiscusTheme("dark");
             } else {
               setGiscusTheme("light");
@@ -192,7 +168,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
           </div>
           <div>
             <div
-              class="group flex items-center justify-end gap-1 py-1 font-mono text-xs"
+              class="group flex items-center justify-end gap-1 py-1 font-mono text-sm"
             >
               <label class="text-textVariant" for="theme-toggle">theme:</label>
               <select
@@ -203,33 +179,6 @@ if (pageTitle === "Trevor Lee | Homepage") {
                 <option value="auto">auto</option>
                 <option value="dark">dark</option>
                 <option value="light">light</option>
-                <hr />
-                <option value="hacker">hacker</option>
-                <option value="red-dragon">red dragon</option>
-                <option value="snes">snes</option>
-                <option value="ube">ube</option>
-                <option value="vice-city">vice city</option>
-              </select>
-            </div>
-            <div
-              class="group hidden items-center gap-1 py-1 font-mono text-xs sm:flex"
-            >
-              <label class="text-textVariant" for="cursor-effect"
-                >cursor effect:
-              </label>
-              <select
-                class="px-1 font-sans text-text"
-                name="cursor-effect"
-                id="cursor-effect"
-              >
-                <option selected value="none">none</option>
-                <hr />
-                <option value="rainbow">rainbow</option>
-                <option value="ghost">ghost</option>
-                <option value="trailing">trailing</option>
-                <option value="bubbles">bubbles</option>
-                <option value="snowflakes">snowflakes</option>
-                <option value="fairy dust">fairy dust</option>
               </select>
             </div>
           </div>
@@ -265,124 +214,14 @@ if (pageTitle === "Trevor Lee | Homepage") {
       mediaQuery.addEventListener("change", (e) => {
         if (select.value === "auto") {
           if (e.matches) {
-            document.documentElement.classList.remove(
-              "light",
-              "hacker",
-              "red-dragon",
-              "ube",
-              "snes",
-              "vice-city",
-            );
+            document.documentElement.classList.remove("light");
             document.documentElement.classList.add("dark");
           } else {
-            document.documentElement.classList.remove(
-              "dark",
-              "hacker",
-              "red-dragon",
-              "ube",
-              "snes",
-              "vice-city",
-            );
+            document.documentElement.classList.remove("dark");
             document.documentElement.classList.add("light");
           }
         }
       });
-    </script>
-
-    <script is:inline type="module" data-astro-rerun>
-      import * as cursors from "https://unpkg.com/cursor-effects@latest/dist/esm.js";
-
-      function init() {
-        const cursorEffects = document.querySelector("#cursor-effect");
-        let currentCursorEffect = null;
-        const enableCursorEffects = localStorage.getItem("cursor-effects");
-
-        if (window.innerWidth < 640) {
-          console.log(window.innerWidth);
-          if (currentCursorEffect) {
-            console.log("destroy");
-            currentCursorEffect.destroy();
-            currentCursorEffect = null;
-          }
-          return;
-        } else if (enableCursorEffects === null) {
-          localStorage.setItem("cursor-effects", "none");
-        } else {
-          cursorEffects.value = enableCursorEffects;
-          switch (enableCursorEffects) {
-            case "rainbow":
-              currentCursorEffect = new cursors.rainbowCursor();
-              break;
-            case "ghost":
-              currentCursorEffect = new cursors.ghostCursor();
-              break;
-            case "trailing":
-              currentCursorEffect = new cursors.trailingCursor();
-              break;
-            case "bubbles":
-              currentCursorEffect = new cursors.bubbleCursor();
-              break;
-            case "snowflakes":
-              currentCursorEffect = new cursors.snowflakeCursor();
-              break;
-            case "fairy dust":
-              currentCursorEffect = new cursors.fairyDustCursor();
-              break;
-            case "none":
-              if (currentCursorEffect) {
-                currentCursorEffect.destroy();
-                currentCursorEffect = null;
-              }
-              break;
-          }
-        }
-
-        cursorEffects?.addEventListener("change", (e) => {
-          if (currentCursorEffect) {
-            currentCursorEffect.destroy();
-            currentCursorEffect = null;
-          }
-
-          switch (e.target.value) {
-            case "rainbow":
-              currentCursorEffect = new cursors.rainbowCursor();
-              break;
-            case "ghost":
-              currentCursorEffect = new cursors.ghostCursor();
-              break;
-            case "trailing":
-              currentCursorEffect = new cursors.trailingCursor();
-              break;
-            case "bubbles":
-              currentCursorEffect = new cursors.bubbleCursor();
-              break;
-            case "snowflakes":
-              currentCursorEffect = new cursors.snowflakeCursor();
-              break;
-            case "fairy dust":
-              currentCursorEffect = new cursors.fairyDustCursor();
-              break;
-            case "none":
-              if (currentCursorEffect) {
-                currentCursorEffect.destroy();
-              }
-              break;
-          }
-
-          localStorage.setItem("cursor-effects", e.target.value);
-        });
-      }
-
-      init();
-
-      document.addEventListener("astro:after-swap", () => {
-        init();
-      });
-
-      window.onresize = () => {
-        console.log("resized");
-        init();
-      };
     </script>
   </body>
 </html>
