install astro/check and ts

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -1,6 +1,6 @@
 ---
-import { formatDate, isWithinLastFortnite } from "../lib/utils";
-const { date, href, title, description, last } = Astro.props;
+import { formatDate } from "../lib/utils";
+const { date, href, title } = Astro.props;
 ---
 
 <li class="-mx-3">
