--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -1,5 +1,5 @@
 ---
-const { type = "button", variant, ...rest } = Astro.props;
+const { type = "button", variant } = Astro.props;
 ---
 
 <button class=`${variant}` {type}>
