--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,10 +13,6 @@ import "@fontsource/geist-sans/900.css";
 import "@fontsource/geist-mono/400.css";
 import "@fontsource/geist-mono/700.css";
 
-import { Icon } from "astro-icon/components";
-
-import Navigation from "../components/Navigation.astro";
-import Contact from "../components/Contact.tsx";
 import Breadcrumbs from "@components/Breadcrumbs.astro";
 import Footer from "@components/Footer.astro";
 
@@ -129,7 +125,7 @@ if (pageTitle === "Trevor Lee | Homepage") {
       init();
     </script>
     <script
-      defer
+      is:inline
       src="https://analytics.us.umami.is/script.js"
       data-website-id="db9f8fea-3974-458c-8aeb-27c9461841e4"></script>
     <meta charset="utf-8" />
