--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -3,7 +3,7 @@ import { formatDate } from "../lib/utils";
 const { date, href, title } = Astro.props;
 ---
 
-<li class="-mx-3">
+<li class="-mx-3 animate-down">
   <a
     class="group flex items-center justify-between gap-2 rounded-2xl p-3 text-text no-underline ring-inset ring-primary hover:bg-backgroundVariant hover:ring-1 focus:bg-backgroundVariant sm:gap-3"
     href={`/posts/${href}`}
