--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,7 +71,7 @@ const pageTitle = "Trevor Lee | Homepage";
   <div class="flex flex-col gap-6 py-16 sm:py-24">
     <ProfileCard images={images} featureImage={profilePicture} />
   </div>
-  <section>
+  <section class="animate-down">
     <span class="py-2 font-mono text-sm text-textVariant">
       <h2 class="py-2">latest posts</h2>
     </span>
@@ -92,11 +92,11 @@ const pageTitle = "Trevor Lee | Homepage";
         >view older posts <Icon
           class="text-text group-hover:animate-horizontal-bounce group-hover:text-primary group-focus:animate-horizontal-bounce group-focus-visible:text-primary"
           name="arrow-right"
-        /></a
-      >
+        />
+      </a>
     </div>
   </section>
-  <section>
+  <section class="animate-down">
     <h2 class="pb-4 pt-16 font-mono text-sm text-textVariant">projects</h2>
     <ul class="grid gap-3 sm:grid-cols-2 sm:gap-6">
       <Project
